Update for Bootstrap 2.0.0

--- a/bootstrap/templates/bootstrap/field_default.html
+++ b/bootstrap/templates/bootstrap/field_default.html
@@ -1,10 +1,10 @@
-<div class="clearfix{% if errors %} error{% endif %}">
+<div class="control-group{% if errors %} error{% endif %}">
     {{ label }}
-    <div class="input">
+    <div class="controls">
         {{ bf }}
         {% if errors %}
         <span class="help-inline">{{ errors }}</span>
         {% endif %}
-        <span class="help-block">{{ help_text }}</span>
+        <p class="help-block">{{ help_text }}</p>
     </div>
 </div> <!-- /clearfix -->
