Added control-label class to label
For better support of BS2.0

--- a/bootstrap/templates/bootstrap/field_default.html
+++ b/bootstrap/templates/bootstrap/field_default.html
@@ -1,5 +1,5 @@
 <div class="control-group{% if errors %} error{% endif %}">
-    {{ label }}
+    <label class="control-label">{{ label }}</label>
     <div class="controls">
         {{ bf }}
         {% if errors %}
