Link labels with their field

--- a/bootstrap/templates/bootstrap/field_appendedtext.html
+++ b/bootstrap/templates/bootstrap/field_appendedtext.html
@@ -1,5 +1,5 @@
 <div class="control-group input-append{% if errors %} error{% endif %}">
-    <label class="control-label">{{ label }}</label>
+    <label class="control-label" for="{{ label_id }}">{{ label }}</label>
     <div class="controls">
         {{ bf }}
         {% if errors %}
