--- a/bootstrap/templates/bootstrap/field_default.html
+++ b/bootstrap/templates/bootstrap/field_default.html
@@ -5,6 +5,8 @@
         {% if errors %}
         <span class="help-inline">{{ errors }}</span>
         {% endif %}
+        {% if help_text %}
         <p class="help-block">{{ help_text }}</p>
+        {% endif %}
     </div>
 </div> <!-- /clearfix -->
