Conflict resolution for 803776541e

--- a/bootstrap/templates/bootstrap/field_appendedtext.html
+++ b/bootstrap/templates/bootstrap/field_appendedtext.html
@@ -1,12 +1,14 @@
-<div class="control-group input-append{% if errors %} error{% endif %}">
+<div class="control-group{% if errors %} error{% endif %}">
     <label class="control-label" for="{{ label_id }}">{{ label }}</label>
     <div class="controls">
-        {{ bf }}
-        {% if errors %}
-        <span class="help-inline">{{ errors }}</span>
-        {% endif %}
-        {% if help_text %}
-        <p class="help-block">{{ help_text }}</p>
-        {% endif %}
+        <div class="input-append">
+            {{ bf }}
+            {% if errors %}
+            <span class="help-inline">{{ errors }}</span>
+            {% endif %}
+            {% if help_text %}
+            <p class="help-block">{{ help_text }}</p>
+            {% endif %}
+        </div>
     </div>
 </div> <!-- /clearfix -->
