--- a/bootstrap/templates/bootstrap/field_default.html
+++ b/bootstrap/templates/bootstrap/field_default.html
@@ -1,4 +1,4 @@
-<div class="control-group{% if errors %} error{% endif %}">
+<div id="div_{{ label_id }}" class="control-group{% if errors %} error{% endif %}">
     <label class="control-label" for="{{ label_id }}">{{ label }}</label>
     <div class="controls">
         {{ bf }}
