added id to div control groups for the rest of the templates

--- a/bootstrap/templates/bootstrap/field_prependedtext.html
+++ b/bootstrap/templates/bootstrap/field_prependedtext.html
@@ -1,4 +1,4 @@
-<div class="control-group{% if errors %} error{% endif %}">
+<div id="div_{{ label_id }}" class="control-group{% if errors %} error{% endif %}">
   <label class="control-label" for="{{ bf_raw.id_for_label }}">{{ label }}</label>
   <div class="controls">
     <div class="input-prepend">
