Use the correct class on help_text and not wrap it in a p element (i.e. behave like the examples in Bootstrap).

--- a/bootstrap/templates/bootstrap/field_default.html
+++ b/bootstrap/templates/bootstrap/field_default.html
@@ -6,7 +6,7 @@
         <span class="help-inline">{{ errors }}</span>
         {% endif %}
         {% if help_text %}
-        <p class="help-block">{{ help_text }}</p>
+        {{ help_text }}
         {% endif %}
     </div>
 </div> <!-- /clearfix -->
