--- a/bootstrap/templates/bootstrap/field_appendedtext.html
+++ b/bootstrap/templates/bootstrap/field_appendedtext.html
@@ -1,4 +1,4 @@
-<div id="div_{{ label_id }}" class="control-group{% if errors %} error{% endif %}">
+<div id="div_{{ label_id }}" class="control-group{% if bf_raw.field.required %} required{% endif %}{% if errors %} error{% endif %}">
     <label class="control-label" for="{{ label_id }}">{{ label }}</label>
     <div class="controls">
         <div class="input-append">
@@ -11,4 +11,4 @@
             {% endif %}
         </div>
     </div>
-</div> <!-- /clearfix -->
+</div>
