--- a/bootstrap/templates/bootstrap/field_default.html
+++ b/bootstrap/templates/bootstrap/field_default.html
@@ -1,4 +1,4 @@
-<div id="div_{{ label_id }}" class="control-group{% if errors %} error{% endif %}">
+<div id="div_{{ label_id }}" class="control-group{% if bf_raw.field.required %} required{% endif %}{% if errors %} error{% endif %}">
     <label class="control-label" for="{{ label_id }}">{{ label }}</label>
     <div class="controls">
         {{ bf }}
@@ -6,7 +6,7 @@
         <span class="help-inline">{{ errors }}</span>
         {% endif %}
         {% if help_text %}
-        {{ help_text }}
+        <p class="help-block">{{ help_text }}</p>
         {% endif %}
     </div>
-</div> <!-- /clearfix -->
+</div>
